# agent-sessions

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  connector.rs  embedder.rs  error.rs  lib.rs  models.rs
crates/core/src/connectors/: claude.rs  codex.rs  cursor.rs  mod.rs  opencode.rs  shared.rs
crates/core/src/store/: lancedb.rs  mod.rs  sqlite_vec.rs
crates/core/tests/: integration_test.rs  real_data.rs
crates/core/tests/fixtures/claude/projects/test-project/: abc123.jsonl
crates/core/tests/fixtures/codex/sessions/2026/01/02/: rollout-2026-01-02T12-00-00-abc.jsonl
docs/plans/: 2026-06-24-agent-sessions-core.md
